--- a/server/views/invoice_Box.ejs
+++ b/server/views/invoice_Box.ejs
@@ -681,8 +681,8 @@
             <!-- Product list  end  -->
 
             <!-- improtant note billtotal start -->
-            <section>
-                <div class="billTotalRow" style="border: 1px solid; border-top: 0px solid !important; padding: 0px 5px; margin: 0; padding-top: 1%; position: relative; height: 150px !important;">
+            <section >
+                <div class="billTotalRow" style="border: 1px solid #000; border-top: 0px solid !important; padding: 0px 5px; margin: 0; padding-top: 1%; position: relative; ">
                     <% if (data.Signature != 'http://localhost:3000/null' && data.Signature != 'http://localhost:3000/undefined'){%>
                         <img src="<%= data.Signature %>" alt="Signature" style="width: 100px;position:absolute; left: 55%;top: 10%;">
                         <%}%>
