--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -9,6 +9,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsbarcode/3.8.0/JsBarcode.all.js"></script>
     <script src="JsBarcode.all.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    
+
 </head>
 <style>
 
@@ -16,6 +20,18 @@
        /* zoom: 95%; */
         zoom: 95%;
     }
+
+
+    body {
+        font-family: "Arial", sans-serif !important;    font-weight: bold !important;
+    }
+      
+    .barcode text {
+    font-family: "Arial", sans-serif !important; /* Yahan Apna Font Lagayein */
+    font-weight: bold !important;
+    font-size: 22px !important;
+    letter-spacing: 4px !important;
+}
 </style>
 <body>
     <% if(data.length !==0){ data.forEach(function (i, index) { %>
@@ -100,19 +116,19 @@
             <%}%>
 
             <% if (data.CompanyBarcode == 1) {%> 
-            <table style="margin-left: -10px; margin-top: -9px;  zoom: 80% !important; ">
+            <table style="margin-left: -10px; margin-top: -12px;  zoom: 80% !important; ">
  
                 <tr>
                     <th  style="width: 140px; padding: 0;">
                         <div
-                            style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                            style="font-size: 18px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
                             <%=i.BarcodeName%>
                         </div>
                         <div>
                             <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
                                 jsbarcode-textmargin="0" jsbarcode-height="45" jsbarcode-marginTop="-15"
-                                jsbarcode-fontSize="15" jsbarcode-marginBottom="0" jsbarcode-width="2"
-                                jsbarcode-fontoptions="bold">
+                                jsbarcode-fontSize="22" jsbarcode-marginBottom="0" jsbarcode-width="2"
+                                jsbarcode-fontoptions="bold" >
                             </svg>
                             <script>
                                 JsBarcode(".barcode").init();
@@ -201,7 +217,7 @@
             <%}%>
 
             <% if (data.CompanyBarcode == 4){%> 
-                <table style="margin-left: -10px; margin-top: -9px; width:100%;">
+                <table style="margin-left: -10px; margin-top: -9px; width:100%;  margin-bottom: 5px;">
                  <tr>
                         <th  style="width: 250px; padding: 0;width:100%;zoom:74%">
                             <div
@@ -209,7 +225,7 @@
                                 <%=i.BarcodeName%>
                             </div>
 
-                            <div>
+                            <div style=" margin-bottom: -10px;">
                                 <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
                                     jsbarcode-textmargin="0" jsbarcode-height="45" jsbarcode-marginTop="-15"
                                     jsbarcode-fontSize="18" jsbarcode-marginBottom="0" jsbarcode-width="2"
@@ -352,15 +368,16 @@
                         </table>
                     <%}%>
 
-                        <% if (data.CompanyBarcode == 9){%> 
-                            <table style="margin-left: -10px; margin-top: -9px;  zoom: 80% !important; ">
+                        <% if (data.CompanyBarcode == 19){%> 
+                            <table style="margin-left: -10px; margin-top: -9px;  margin-bottom: 20px; zoom: 80% !important; ">
          
                                 <tr>
-                                    <th  style="width: 180px; padding: 0;">
-                                        <img src="<%= data.LogoURL %>" alt="LOGO" <% %> style="width:100%;">
-                                      
+                                    <th style="width: 180px; padding: 0; height: 80px; display: flex; justify-content: center; align-items: center;">
+                                        <img src="<%= data.LogoURL %>" alt="LOGO" style="width: 100%; height: 100%; object-fit: contain; filter: grayscale(100%) !important;">
                                     </th>
-                                    <th  style="width: 220px;">
+                                    
+                                    
+                                    <!-- <th  style="width: 220px;">
                                     <% if (data.MRPHide == 'true'){%>
                                         <div
                                             style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 18px;">
@@ -376,11 +393,73 @@
                                             Mkd By Eystella <br> International Pvt.Ltd  
                                         </div>
                                         
+                                    </th> -->
+
+                                    <th  style="width: 220px; padding: 0; ">
+                                        <div
+                                            style="font-size:20px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center;  padding-bottom:1px; ">
+                                            MRP  <%=i.RetailPrice%> 
+                                        </div>
+                                        <div>
+                                            <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
+                                                jsbarcode-textmargin="0" jsbarcode-height="45" jsbarcode-marginTop="-15"
+                                                jsbarcode-fontSize="15" jsbarcode-marginBottom="0" jsbarcode-width="2"
+                                                jsbarcode-fontoptions="bold">
+                                            </svg>
+                                            <script>
+                                                JsBarcode(".barcode").init();
+                                            </script>
+                                        </div>
+                                    </th>
+
+                                   
+                                </tr>
+                            </table>
+                           
+                        <%}%>
+
+
+                        <% if (data.CompanyBarcode == 9){%> 
+                            <table style="margin-left: -10px; margin-top: -9px;  margin-bottom: 20px; zoom: 80% !important; ">
+                                <tr>
+                                    <th  style="width: 140px; padding: 0; ">
+                                        <div
+                                        style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                                        <%=i.BarcodeName%>
+                                    </div>
+                                            <div id="qrcode-<%= i.Barcode %>" style="text-align: center;margin-left: 25px;">
+                                                    <script>
+                                                        const qrcode = new QRCode(document.getElementById("qrcode-<%= i.Barcode %>"), {
+                                                            text: "<%= i.Barcode %>",
+                                                            width: 80,
+                                                            height: 60
+                                                        });
+                                                    </script>
+                                        </div>
+                                       
+                                    </th>
+                                    <th  style="width: 220px;">
+                                    <% if (data.MRPHide == 'true'){%>
+                                        <div
+                                            style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 18px;">
+                                                       MRP  <%=i.RetailPrice%>          
+                                        </div>
+                                        <%}%> 
+                                        <div
+                                            style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 18px; font-family: verdana ;">
+                                            <%=i.ProductModelName%>
+                                        </div>
+                                        <div
+                                            style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
+                                            Mkd By Eystella  
+                                        </div>
                                     </th>
                                 </tr>
                             </table>
                         <%}%>
          
                 <%})}%>
+
+                
 </body>
 </html>
