--- a/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.html
+++ b/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.html
@@ -13,7 +13,7 @@
                   <div class="col-md-2 col-1 ps-md-0 ps-1">
                     <select class=" form-control"
                       style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
-                      [(ngModel)]="itemsPerPage" >
+                      [(ngModel)]="itemsPerPage"   (change)="getList();">
                       <option [ngValue]="10">Show 10 Row</option>
                       <option [ngValue]="25">Show 25 Row</option>
                       <option [ngValue]="50">Show 50 Row</option>
@@ -24,7 +24,7 @@
                   </div>
                   <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
                     <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
-                      [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
+                      [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
                      [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                     </ngb-pagination>
                   </div>
