--- a/web1/src/app/admin/user-update-password/user-update-password.component.html
+++ b/web1/src/app/admin/user-update-password/user-update-password.component.html
@@ -51,7 +51,7 @@
                                         <p class="text-center m-0">{{data.CancellationDate }}</p>
                                         <div class="text-center mb-3 mt-2">
                                             <button mat-raised-button color="primary"
-                                            (click)="openModal(content,data.ID)" >
+                                            (click)="openModal(content,data)" >
                                                Password Update
                                             </button>
                                         </div>
