--- a/web1/src/app/admin/company-list.component.html
+++ b/web1/src/app/admin/company-list.component.html
@@ -105,6 +105,7 @@
                                                     <th class="text-left">CacellationDate</th>
                                                     <th class="text-left">Status</th>
                                                     <th class="text-left">Sale</th>
+                                                    <th class="text-left">DB</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -166,6 +167,8 @@
                                                         <span *ngIf="data.WholeSale === 'true'">WholeSale</span>
                                                         <span *ngIf="data.RetailPrice === 'true'">Retail </span>
                                                     </td>
+                                                    <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">
+                                                        {{data.AssignDataBaseName}}</td>
                                                 </tr>
                                             </tbody>
                                         </table>
