--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -134,7 +134,7 @@
                             <button title="Messenger" class="bg-btn msg">
                               <i class="fab fa-facebook-messenger"></i>
                             </button>
-                            <button title="Payment History" class="detail_icons bg-btn"
+                            <button *ngIf="user.UserGroup != 'Employee'" title="Payment History" class="detail_icons bg-btn"
                               (click)="openModal(content,Bdata)">
                               <i class="fas fa-info-circle ms-1" data-mdb-toggle="modal"
                                 data-mdb-target="#exampleModal"> </i>
@@ -147,7 +147,7 @@
                               <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
                             </button>
 
-                            <button title="Payment" class="bg-btn" (click)="openModal13(content1,Bdata)">
+                            <button  title="Payment" class="bg-btn" (click)="openModal13(content1,Bdata)">
                               <mat-icon class="edit_icon ms-1">attach_money </mat-icon>
                             </button>
                             <div class="button-container" *ngIf="this.id != '0'">
