--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -77,6 +77,8 @@
                                                     <mat-option value="ADV.">ADV.</mat-option>
                                                     <mat-option value="Smt.">Smt.</mat-option>
                                                     <mat-option value="Mst.">Mst.</mat-option>
+                                                    <mat-option value="Party">Party</mat-option>
+                                                    <mat-option value="M/S">M/S</mat-option>
                                                 </mat-select>
                                             </mat-form-field>
                                         </div>
@@ -2168,6 +2170,8 @@
                                                     <mat-option value="ADV.">ADV.</mat-option>
                                                     <mat-option value="Smt.">Smt.</mat-option>
                                                     <mat-option value="Mst.">Mst.</mat-option>
+                                                    <mat-option value="Party">Party</mat-option>
+                                                    <mat-option value="M/S">M/S</mat-option>
                                                 </mat-select>
                                             </mat-form-field>
                                         </div>
@@ -2515,6 +2519,8 @@
                                                     <mat-option value="ADV.">ADV.</mat-option>
                                                     <mat-option value="Smt.">Smt.</mat-option>
                                                     <mat-option value="Mst.">Mst.</mat-option>
+                                                    <mat-option value="Party">Party</mat-option>
+                                                    <mat-option value="M/S">M/S</mat-option>
                                                 </mat-select>
                                             </mat-form-field>
                                         </div>
